# jax_quadruped

./: .gitignore
src/jax_controller/: CMakeLists.txt  package.xml
src/jax_controller/config/: jax_controllers.yaml
src/jax_controller/launch/: gazebo.launch.py
src/jax_controller/scripts/: imu_listener.py  jax_balancer.py  jax_teleop_body.py  stand_node.py
src/jax_description/: CMakeLists.txt  package.xml
src/jax_description/launch/: jax.rviz.py
src/jax_description/meshes/: fl_calf_1.stl  fl_foot_1.stl  fl_hip_1.stl  fl_thigh_1.stl  fr_calf_1.stl  fr_foot_1.stl  fr_hip_1.stl  fr_thigh_1.stl  rl_calf_1.stl  rl_foot_1.stl  rl_hip_1.stl  rl_thigh_1.stl  rr_calf_1.stl  rr_foot_1.stl  rr_hip_1.stl  rr_thigh_1.stl
src/jax_description/urdf/: jax.gazebo  jax.trans  jax.xacro  materials.xacro
src/jax_description/world/: jax_world.sdf
